--- a/EMS/xliff/tests/Unit/Resources/Integrated/xliffs/8fa9e811c5df0e67ac395f0eb87edb182ccf83a3_1014036.xlf
+++ b/EMS/xliff/tests/Unit/Resources/Integrated/xliffs/8fa9e811c5df0e67ac395f0eb87edb182ccf83a3_1014036.xlf
@@ -73,9 +73,13 @@
           <source xml:lang="nl"/>
           <target xml:lang="de" state="final"/>
         </trans-unit>
-        <trans-unit restype="lb" id="/html/body/br">
-          <source xml:lang="nl"/>
-          <target xml:lang="de" state="final"/>
+        <trans-unit id="/html/body/br">
+          <source xml:lang="nl">
+            <g ctype="lb"/>
+          </source>
+          <target xml:lang="de" state="final">
+            <g ctype="lb"/>
+          </target>
         </trans-unit>
         <trans-unit restype="x-html-p" id="/html/body/p[13]">
           <source xml:lang="nl"/>
