--- a/EMS/xliff/tests/Unit/Resources/Integrated/xliffs/7a313fdeec39ec5234c567b807bddc07b1ad9836_1012237.xlf
+++ b/EMS/xliff/tests/Unit/Resources/Integrated/xliffs/7a313fdeec39ec5234c567b807bddc07b1ad9836_1012237.xlf
@@ -105,9 +105,13 @@
             <target xml:lang="de" state="final"/>
           </trans-unit>
         </group>
-        <trans-unit restype="lb" id="/html/body/br">
-          <source xml:lang="nl"/>
-          <target xml:lang="de" state="final"/>
+        <trans-unit id="/html/body/br">
+          <source xml:lang="nl">
+            <g ctype="lb"/>
+          </source>
+          <target xml:lang="de" state="final">
+            <g ctype="lb"/>
+          </target>
         </trans-unit>
       </group>
     </body>
